# VLLM-TurboQuant-SM120

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_fleet.py  bench_long_context.py  bench_max_concurrency.py  bench_phase5_ab.py  bench_phase5_attn.py  bench_quick.py  bench_spec_decode.py  bench_throughput.py  bench_tilesize.py  profile_fused.py  profile_overhead.py  results_max_concurrency_1775492295.json  results_spec_decode_baseline_1775657531.json  results_spec_decode_tq4_nvfp4_spec_1775660437.json  results_spec_decode_tq4_spec_decode_1775659758.json  results_tq4_128k_x24_1775623425.json  results_tq4_cudagraph_high_concurrency_1775612783.json  results_tq4_eager_high_concurrency_1775610883.json  results_tq4_triton_cudagraph_1775617002.json  results_turbo_phase1_1775491803.json
docs/: SM120_LESSONS.md
src/trinity_turbo/: __init__.py  config.py  features.py  fleet.py  plugin.py
src/trinity_turbo/backend/: attention_backend.py  attention_impl.py  cache_spec.py  layer_router.py
src/trinity_turbo/kernels/: cuda_compress.cu  cuda_compress_wrapper.py  cuda_rotation.cu  cuda_rotation_wrapper.py  fast_wht.py  hadacore_wrapper.py  triton_compress.py  triton_compress_v2.py  triton_decompress.py  triton_fused_attn.py  triton_fused_compress.py  triton_fused_compress_v2.py  triton_fused_rotation.py  triton_hadamard.py  (+2 more)
tests/: conftest.py  test_attention_flow.py  test_codebook.py  test_config.py  test_fused_attn.py  test_layer_router.py  test_packing.py  test_tq4_unified_attn.py  test_triton_kernels.py  test_triton_sm120_cudagraph.py  test_turboquant.py
(+4 files in other folders)
